src-core/src/components/chip/chip.scss
@import "../../theme/theme";

$chip-height: 30px; // with border it's 32px.

.se-chip {
  cursor: pointer;
  display: inline-flex;
  margin: $spacing;
  height: $chip-height;
  padding-left: $spacing;
  padding-right: $spacing;
  font-size: 16px;
  font-weight: 400;
  line-height: 25px;
  text-align: left;
  background: transparent;
  outline: none;
  border-radius: 16px;
  @include align-items(center);

  .value {
    .can-close {
      cursor: default;
      padding-right: $spacing-small;
    }  
  }

  .se-icon {
    cursor: pointer;
    font-size: 24px;
    margin-right: -3px;
    font-family: "se-icon";
    &[data-hide] {
      display: none;
    }
  }

  // Align close icon on MS Edge browser.
  // Will remove when Chromium-based Edge browser is released.
  @supports (-ms-ime-align:auto) {
    .se-icon {
      top: 0;
    }
  }

  &.standard {
    border: 1px solid $se-ultra-dark-grey;
    color: $se-anthracite-grey;
    &:hover {
      border: 1px solid $se-anthracite-grey;
      background-color: rgba(203,203,203,0.2);
    }
  }

  &.alternative {
    border: 1px solid $se-white;
    @include color('alternative');
    &:hover {
      background-color: rgba(203,203,203,0.6);
    }
  }

  &.standard:active,
  &.standard.selected,
  &.alternative:active,
  &.alternative.selected {
    @include color('selected-contrast');
    @include background-color('selected');
    border: 1px solid $se-dark-grey;
  }

  &.standard:focus,
  &.alternative:focus {
    @include color('focus-contrast');
    @include background-color('focus');
  }

  &.disabled,
  &.disabled.value,
  &.disabled:hover,
  &.disabled:focus {
    cursor: default;
    background-color: inherit;
    color: $se-light-grey;
    border: 1px solid $se-light-grey;
    .se-icon {
      cursor: default;
    }
  }

  &.display-block {
    width: 100%;
    margin-top: $spacing;
    margin-left: 0;
    margin-right: 0;
    padding: 0;
    cursor: pointer;
    @include display-flex();
    @include flex(1);
    @include justify-content(space-between);

    .value {
      padding-left: $spacing;
      width: 100%;
      
      &.can-close {
        cursor: default;
      }
    }

    .se-icon {
      padding-right: $spacing;
    }
  }
}

